syntax = "proto3";

package template;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "proto/";

service TodoService {
  rpc ListAll(google.protobuf.Empty) returns (ListAllResponse) {
    option (google.api.http) = {
      get: "/todos"
    };
  }

  rpc Create(CreateRequest) returns (Todo) {
    option (google.api.http) = {
      post: "/todos"
      body: "*"
    };
  }

  rpc Get(GetRequest) returns (Todo) {
    option (google.api.http) = {
      get: "/todos/{id}"
    };
  }

  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/todos/{id}"
    };
  }
}

message ListAllResponse {
  repeated Todo todos = 1;
}

message CreateRequest {
  string text = 1;
}

message GetRequest {
  string id = 1;
}

message DeleteRequest {
  string id = 1;
}

message Todo {
  string id = 1;
  string text = 2;
  string user_id = 3;
  string timestamp = 4;
}
